--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         Que disfruten de la Feria tanto como nosotros lo hicimos al prepararla. Sean todos Bienvenidos!</p>
     </div>
 
-<img src="./logos inicio/1000063404-removebg-preview.png" alt="">    
+<img src="./logos inicio/1728913550726.png" alt="">    
     <h4>"El éxito es la suma de pequeños esfuerzos repetidos días tras días"</h6>
         <div class="unca">
    <img src="./logos inicio/logo-en-rojo.png" alt="ENET">
