--- a/emprendimietos.html
+++ b/emprendimietos.html
@@ -70,8 +70,7 @@
     <a href="./electronica.html" class="btn btn-outline-dark">Electrónica</a>
     <a href="./accesorios.html" class="btn btn-outline-dark">Accesorios</a>
     <a href="./diseño.html" class="btn btn-outline-dark">Diseño</a>
-    <a href="./decoracion.htmla
-    " class="btn btn-outline-dark">Decoracion</a>
+    <a href="./decoracion.html" class="btn btn-outline-dark">Decoracion</a>
     <a href="./jardin.html" class="btn btn-outline-dark">Jardín</a>
 </div>
     <footer>
