--- a/jardin.html
+++ b/jardin.html
@@ -80,7 +80,8 @@
                     <img src="./emprendimientos/jardin/flor de maceta/WhatsApp Image 2024-10-12 at 11.14.23 AM.jpeg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./emprendimientos/amethist/WhatsApp Image 2024-10-12 at 7.01.23 PM.jpeg" class="d-block w-100" alt="...">
+                                       <img src="./emprendimientos/jardin/ADOQUINES/WhatsApp Image 2024-10-14 at 11.50.41 AM.jpeg" class="d-block w-100" alt="...">
+
                 </div>
             </div>
 
