--- a/jardin.html
+++ b/jardin.html
@@ -71,7 +71,7 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="./emprendimientos/infocat/WhatsApp Image 2024-10-10 at 2.41.56 PM.jpeg" class="d-block w-100" alt="...">
+                <img src="./emprendimientos/jardin/jardin urbano/WhatsApp Image 2024-10-14 at 10.36.50 PM.jpeg  " class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item " data-bs-interval="10000">
                     <img src="./emprendimientos/jardin/cementopia/cementopialogo.PNG" class="d-block w-100" alt="...">
