--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             </div>
         </nav>
         <main class="container my-5">
-            <h1 class="text-center">Bienvenidos a la Feria de Emprendedores 2024</h1>
+            <h1 class="text-center">Bienvenidos a la 4° Feria de Emprendedores 2024</h1>
             <p class="lead text-center">Escuela Pre Universitaria E.N.E.T N°1 Prof."Vicente García Aguilera"</p>
-            <p class="lead text-center">15 de Noviembre</p>
+            <p class="lead text-center">14 de Noviembre</p>
             <div style="display: flex; justify-content: center;">
                 <a href="./ubicacion.html" class="btn btn-outline-dark">Lugar: Salón de Usos Múltiples (SUM)</a>
             </div>
@@ -74,8 +74,9 @@
     </div>
 
     <div class="introducion">
-        <p>Todos los años, Ministerios y escuelas de todo el país celebran la Semana de la Educación Técnica para mostrar los proyectos que docentes y estudiantes realizan diariamente en aulas, talleres y laboratorios, es por ello que alumnos de 2° y 4° años del Ciclo Superior de nuestra Institución este 15 de noviembre se convocan para exhibir sus emprendimientos en la Feria de Emprendedores Edición 2024, demostrando así las aptitudes y conocimientos adquiridos desde el inicio de sus estudios en nuestra institución; y que desde el área de Relaciones Humanas se les brinda el espacio para desplegar todo lo aprendido. 
-        Que disfruten de la Feria tanto como nosotros lo hicimos al prepararla. Sean todos Bienvenidos!</p>
+        <p>Todos los años, Ministerios y escuelas de todo el país celebran la Semana de la Educación Técnica para mostrar los proyectos que docentes y estudiantes, realizan diariamente en aulas, talleres y laboratorios, es por ello que alumnos de 2° y 4° años del Ciclo Superior de nuestra Institución, este 14 de noviembre se convocan para exhibir sus emprendimientos en la 4° Feria de Emprendedores Edición 2024, demostrando así las aptitudes y conocimientos adquiridos desde el inicio de sus estudios en nuestra institución; y que desde el área de Relaciones Humanas se les brinda el espacio para desplegar todo lo aprendido. 
+        </p>
+        <p>Que disfruten de la Feria tanto como nosotros lo hicimos al prepararla. Sean todos Bienvenidos!</p>
     </div>
 
 <img src="./logos inicio/1728913550726.png" alt="">    
