--- a/agradecimientos.html
+++ b/agradecimientos.html
@@ -57,7 +57,7 @@
         </div>
     </nav>
     <main class="container my-5">
-        <h1 class="text-center">Agradecimientos</h1>
+        <h1 class="text-center">AAGRADECIMIENTOS</h1>
         <p class="lead text-center">"La gratitud es la memoria del corazón"</p>
         <div style="display: flex; justify-content: center;">
             <a href="#" class="btn btn-outline-dark">Jean Baptiste Massieu </a>
@@ -75,6 +75,10 @@
     <p class="text-decoration-underline">Vicedirectora: Prof Mirian Nieva</p>
     <p class="text-decoration-underline">Regente de Cultura General: Lic. Silvia Barrionuevo</p>
     <p class="text-decoration-underline">Regente Cultura Tecnica: Prof Sonia Mascareño</p>
+    <p class="fw-bold">A nuestro auspiciantes por haber echo posible una edición más de nuestra Feria apoyando a los Alumnos Emprendimientos </p>
+<p class="fw-bold">Al Dierector del NODO Tecnológico "Lic.Emilio Ramaci" por las capacitaciones ofrecidas </p>
+<p class="fw-bold"> A Junior Achievement Argentina por la asitencía en educacion financiera </p>
+<p class="fw-bold">Al Licenciado Marcelo Altamiranda por la asistencia en Microeconomía para Emprendedores</p>
 </div>
 <footer>
     <p>@2024 Feria de Emprendedores. Todos los derechos reservados.</p>
