--- a/educacion tecnica.html
+++ b/educacion tecnica.html
@@ -59,7 +59,7 @@
             </div>
         </nav>
         <main class="container my-5">
-            <h1 class="text-center">Semana de la Educación Técnica</h1>
+            <h1 class="text-center">SEMANA DE LA EDUCACIÓN TÉCNICA</h1>
           
         </main>
     </header>
