--- a/agradecimientos.html
+++ b/agradecimientos.html
@@ -75,7 +75,7 @@
     <p class="text-decoration-underline">Vicedirectora: Prof Mirian Nieva</p>
     <p class="text-decoration-underline">Regente de Cultura General: Lic. Silvia Barrionuevo</p>
     <p class="text-decoration-underline">Regente Cultura Tecnica: Prof Sonia Mascareño</p>
-    <p class="fw-bold">A nuestro auspiciantes por haber echo posible una edición más de nuestra Feria apoyando a los Alumnos Emprendimientos </p>
+    <p class="fw-bold">A nuestro auspiciantes por haber echo posible una edición más de nuestra Feria apoyando a los Alumnos Emprenderores</p>
 <p class="fw-bold">Al Dierector del NODO Tecnológico "Lic.Emilio Ramaci" por las capacitaciones ofrecidas </p>
 <p class="fw-bold"> A Junior Achievement Argentina por la asitencía en educacion financiera </p>
 <p class="fw-bold">Al Licenciado Marcelo Altamiranda por la asistencia en Microeconomía para Emprendedores</p>
