--- a/creditos.html
+++ b/creditos.html
@@ -86,6 +86,8 @@
                   <li style="margin: 0;">Molina Jose- Ogas Juan</li>
                   <li style="margin: 0;">Renato Musella</li>
                   <li style="margin: 0;">Maria Eugenia Ferreyra</li>
+                  <li style="margin: 0;">Ogas Juan</li>
+
            </ul>
               
             
