--- a/agradecimientos.html
+++ b/agradecimientos.html
@@ -57,7 +57,7 @@
         </div>
     </nav>
     <main class="container my-5">
-        <h1 class="text-center">AAGRADECIMIENTOS</h1>
+        <h1 class="text-center">AGRADECIMIENTOS</h1>
         <p class="lead text-center">"La gratitud es la memoria del corazón"</p>
         <div style="display: flex; justify-content: center;">
             <a href="#" class="btn btn-outline-dark">Jean Baptiste Massieu </a>
